--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,32 @@
 {
-  "name": "server",
+  "name": "catstronauts-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "back-end demo app for Apollo's lift-off II course",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "tsc",
+    "dev": "ts-node-dev --respawn ./src/index.ts",
+    "start": "npm run compile && nodemon ./dist/index.js",
+    "generate": "graphql-codegen"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@apollo/server": "^4.11.0",
-    "axios": "^1.7.3",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "graphql": "^16.9.0"
-  }
+    "@apollo/datasource-rest": "^6.3.0",
+    "@apollo/server": "^4.5.0",
+    "@graphql-tools/mock": "^8.7.6",
+    "@graphql-tools/schema": "^9.0.4",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/typescript": "^4.0.9",
+    "@graphql-codegen/typescript-resolvers": "^4.2.1",
+    "dotenv": "^8.2.0",
+    "nodemon": "^3.0.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.3"
+  },
+  "author": "Raphael Terrier @R4ph-t",
+  "license": "MIT",
+  "private": true
 }
